# data-science-admin-tool

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  db.sqlite3  environment.yml  manage.py  mypy.ini  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  webpack.config.js
cognito/: __init__.py  admin.py  authentication.py  models.py  serializers.py  service.py  urls.py  views.py
cognito/migrations/: 0001_initial.py  0002_alter_cognitouser_options_cognitouser_groups_and_more.py  0003_alter_cognitouser_id.py  0004_remove_cognitouser_password.py  0005_cognitouser_bio.py  0006_alter_cognitouser_bio.py  0007_cognitouser_email_verified.py  0008_cognitouser_password.py
data_science_admin_tool/: admin.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
frontend/: App.tsx  index.css  index.js
frontend/components/elements/: Input.tsx  PrimaryButton.tsx  Txt.tsx  index.ts
frontend/components/extensive/Header/: NavLink.tsx  index.tsx
frontend/components/generic/: LoadingWrapper.tsx
frontend/helpers/: axios.ts  constants.ts
frontend/pages/: main.navigator.tsx  main.provider.tsx
frontend/pages/home/: index.tsx
frontend/pages/not-found/: index.tsx
frontend/pages/profile/: index.tsx
frontend/pages/project/: index.tsx
frontend/types/: index.ts
projects/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_project_description.py  0003_alter_project_id.py
static/: README.md  bundle.js  index-bundle.js
templates/: index.html
(+5 files in other folders)
